# Jukk

./: .gitignore  Design.txt  Makefile  Readme.md
include/: client.h  util.h
include/protocol/: protocol.h  stateholder.h
include/server/: stateholder.h  tcpserver.h
resource/test/: packe_buffer.txt  packet_valid.txt
src/: CMakeLists.txt  client.cpp  commandDispatcher.cpp  commandDispatcher.h  protocol.cpp  server.cpp  test.cpp  util.cpp
src/client/: client.cpp
src/include/: commandDispatcher.h  protocol.h  util.h
src/jukk/: jukk.cpp
src/protocol/: commandDispatcher.h  protocol.cpp  stateholder.cpp
src/server/: server.cpp  serverapp.cpp  stateholder.cpp  tcpserver.cpp
src/tests/: experimentMain.cpp  test_Protocol.cpp  test_Util.cpp  testmain.cpp
